--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "google-map-react": "^0.34.0",
+    "google-maps-react": "^1.1.11",
     "html-webpack-plugin": "2.29.0",
     "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
@@ -28,6 +30,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-scrollchor": "^4.2.1",
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
