--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
     "react-scrollchor": "^4.2.1",
+    "react-spinkit": "^3.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "sweetalert2": "^7.18.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
