--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.2.2",
     "react-scrollchor": "^4.2.1",
     "react-spinkit": "^3.0.0",
     "sass-loader": "^6.0.7",
