--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+src/book-now/config.js
+src/book-now/config.json
+src/book-now/source.json
 
 npm-debug.log*
 yarn-debug.log*
