--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 src/book-now/config.js
 src/book-now/config.json
 src/book-now/source.json
+src/book-now/google-map/google-keys.js
 
 npm-debug.log*
 yarn-debug.log*
