--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "fs-extra": "3.0.1",
     "google-map-react": "^0.34.0",
     "google-maps-react": "^1.1.11",
+    "hoek": "^5.0.3",
     "html-webpack-plugin": "2.29.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
-    "react-burger-menu": "^2.4.0",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-burger-menu": "^2.4.2",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.2.2",
     "react-scrollchor": "^4.2.1",
@@ -38,7 +39,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "sweetalert2": "^7.18.0",
+    "sweetalert2": "^7.19.1",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
@@ -102,18 +103,18 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
-    "eslint": "^4.10.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-google": "^0.9.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^20.0.4",
     "jquery": "^3.3.1",
-    "jsdom": "^11.6.2",
+    "jsdom": "^11.9.0",
     "react-test-render": "^1.1.1"
   }
 }
